<resources>
    <string name="app_name">TedxAKGEC</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_event">Next Event</string>
    <string name="ajay_kumar_garg_engineering_college">Ajay Kumar Garg Engineering College</string>
    <string name="_24th_km_stone_nh_24">24th KM Stone, NH 24</string>
    <string name="ghaziabad">Ghaziabad</string>
    <string name="reserve_seats">Reserve Seats</string>
    <string name="home">Home</string>
    <string name="speakers">Speakers</string>
    <string name="days_left">Days Left</string>
    <string name="create_event">Create Reminder</string>
    <string name="close">Close</string>
    <string name="get_directions">Get Directions</string>
    <string name="about_us">About Us</string>
    <string name="follow_us">Follow Us</string>
    <string name="follow">follow</string>
    <string name="tedxakgec">TEDxAKGEC</string>
    <string name="bdcoe">Big Data Center of Excellence</string>
    <string name="powered_by">Powered By</string>
    <string name="developed_by">developed by</string>
    <string name="rishitoshsingh">rishitoshsingh</string>
    <string name="coded_with">Coded with</string>
    <string name="by">by</string>
    <string name="in_India">in India</string>
    <string name="directions">Directions</string>
    <string name="open_in_n_maps">Open in \n Maps</string>
    <string name="sample_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
</resources>
