<!--<android.support.v4.widget.NestedScrollView--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="in.co.bdcoe.tedxakgec.Fragments.HomeFragment">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/days_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="X"
                        android:textColor="@color/colorAccent"
                        android:textSize="32sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/days_left"
                        android:textColor="@color/primary_text"
                        android:textSize="18sp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/create_event_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless">

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="4dp"
                        android:layout_marginTop="4dp"
                        android:background="@color/secondary_text" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">

                        <ImageView
                            android:id="@+id/calender_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:src="@drawable/ic_date_range_black_48dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/calender_icon"
                            android:layout_centerHorizontal="true"
                            android:text="@string/create_event"
                            android:textColor="@color/colorAccent"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </RelativeLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/hall" />

                <TextView
                    android:id="@+id/next_event_head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/next_event"
                    android:textColor="@color/colorAccent"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/next_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/next_event_head"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="---------------"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/address_line_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/next_event"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_light_italic"
                    android:text="@string/ajay_kumar_garg_engineering_college"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/address_line_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_line_1"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_light_italic"
                    android:text="@string/_24th_km_stone_nh_24"
                    android:textColor="@color/colorPrimaryDark" />

                <TextView
                    android:id="@+id/address_line_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/address_line_2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/roboto_light_italic"
                    android:text="@string/ghaziabad"
                    android:textColor="@color/colorPrimaryDark" />

                <ImageView
                    android:id="@+id/get_directions"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="48dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_near_me_black_48dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/reserve_seats"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_alignParentBottom="true"
                    android:background="@color/colorAccent"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:gravity="center"
                    android:text="@string/reserve_seats"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="250dp"-->
        <!--android:background="@color/colorAccent">-->

        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/upper_diagonal_1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_direction="left"-->
        <!--app:shape_diagonal_position="bottom">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/downward_diagonal_1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_position="top">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<TextView-->
        <!--android:id="@+id/about_tedx_akgec"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@id/downward_diagonal_1"-->
        <!--android:layout_below="@id/upper_diagonal_1"-->
        <!--android:autoSizeTextType="uniform"-->
        <!--android:ellipsize="marquee"-->
        <!--android:padding="16dp"-->
        <!--android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."-->
        <!--android:textColor="@color/colorPrimaryDark" />-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="250dp"-->
        <!--android:background="@color/primary_text">-->

        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/upper_diagonal_2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_direction="right"-->
        <!--app:shape_diagonal_position="bottom">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/downward_diagonal_2"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_direction="left"-->
        <!--app:shape_diagonal_position="top">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<TextView-->
        <!--android:id="@+id/about_ted"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@id/downward_diagonal_2"-->
        <!--android:layout_below="@id/upper_diagonal_2"-->
        <!--android:autoSizeTextType="uniform"-->
        <!--android:ellipsize="marquee"-->
        <!--android:padding="16dp"-->
        <!--android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."-->
        <!--android:textColor="@color/colorPrimaryDark" />-->

        <!--</RelativeLayout>-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="250dp"-->
        <!--android:background="@color/colorAccent">-->


        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/upper_diagonal_3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_direction="left"-->
        <!--app:shape_diagonal_position="bottom">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<com.github.florent37.shapeofview.shapes.DiagonalView-->
        <!--android:id="@+id/downward_diagonal_3"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="48dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--app:shape_diagonal_angle="7"-->
        <!--app:shape_diagonal_position="top">-->

        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:background="@color/colorPrimaryDark" />-->

        <!--</com.github.florent37.shapeofview.shapes.DiagonalView>-->

        <!--<TextView-->
        <!--android:id="@+id/about_tedx"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_above="@id/downward_diagonal_3"-->
        <!--android:layout_below="@id/upper_diagonal_3"-->
        <!--android:autoSizeTextType="uniform"-->
        <!--android:ellipsize="marquee"-->
        <!--android:padding="16dp"-->
        <!--android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."-->
        <!--android:textColor="@color/colorPrimaryDark" />-->

        <!--</RelativeLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

